# review

./: .claudeignore  .gitignore  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  claude-plan.md  dependency-graph-playground.html  index.html  install.sh  package-lock.json  package.json  pyproject.toml  section-hierarchy-playground.html  sidebar-playground.html  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  publish.yml  release.yml
compare/: Cargo.toml
compare/resources/: taxonomy.json
compare/src/: claude_code.rs  error.rs  filters.rs  lib.rs
compare/src/classify/: claude.rs  mod.rs  prompt.rs
compare/src/cli/: mod.rs
compare/src/cli/commands/: approve.rs  classify.rs  claude_code.rs  compare.rs  diff.rs  files.rs  mod.rs  open.rs  reset.rs  status.rs  taxonomy.rs  trust.rs  untrust.rs
compare/src/review/: state.rs  storage.rs
compare/src/sources/: local_git.rs  traits.rs
compare/src/trust/: patterns.rs
core/: CLAUDE.md  Cargo.toml
core/examples/: bench_hunk_loading.rs
core/resources/eval/: cases.json
core/resources/skills/pre-review/: SKILL.md
core/resources/skills/review-cli/: SKILL.md
core/resources/skills/review-guide/: SKILL.md
core/src/: filters.rs  lib.rs
core/src/ai/: commit_message.rs  mod.rs
core/src/ai/grouping/: generate.rs  mod.rs  prompt.rs
core/src/classify/: mod.rs  static_rules.rs
core/src/cli/: comments.rs  common.rs  findings.rs  guide.rs  mod.rs  review_state.rs  skill.rs  staging.rs  url.rs
core/src/diff/: cache.rs  parser.rs
core/src/lsp/: client.rs  jsonrpc.rs  mod.rs  registry.rs  transport.rs
core/src/review/: central.rs  findings.rs  migrate.rs  mod.rs  state.rs  storage.rs
core/src/server/: handlers.rs  mod.rs
core/src/service/: activity.rs  activity_cache.rs  commit.rs  files.rs  freshness.rs  mod.rs  review_io.rs  symbols.rs  targets.rs  util.rs  vscode.rs  watcher_events.rs
core/src/sources/: github.rs  local_git.rs  traits.rs
core/src/symbols/: cache.rs  extractor.rs  graph.rs  mod.rs
core/src/trust/: matching.rs  mod.rs  patterns.rs
core/tests/: test_streaming.rs
desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
desktop/agent/: package-lock.json  package.json
desktop/tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
desktop/ui/: CLAUDE.md  index.css  main.tsx  router.tsx
human_review/: __init__.py  cli.py  config.py  git.py  hunks.py  output.py  patterns.py  review.py  skill.py  state.py
ios/: CLAUDE.md
ios/Review/: ContentView.swift  Info.plist  ReviewApp.swift
ios/Review.xcodeproj/: project.pbxproj
mobile/: CLAUDE.md  README.md  app.json  package-lock.json  package.json
mobile/api/: client.ts  hooks.ts  sync-client.ts  types.ts
mobile/app/: _layout.tsx  connect.tsx  settings.tsx
mobile/components/: ConnectionBadge.tsx  DiffLine.tsx  FileListItem.tsx  FileTreeNode.tsx  GlassTabBar.tsx  HunkView.tsx  ReviewCard.tsx  code-block.tsx  connection-form.tsx  file-list-item.tsx  glass-view.tsx  hunk-card.tsx  icon.tsx  repo-list-item.tsx  swipeable-hunk.tsx
mobile/hooks/: useReviewDetail.ts
mobile/lib/: colors.ts  tree-utils.ts  trust.ts  utils.ts
mobile/stores/: connection.ts  index.ts
proposals/: hunk-decomposition.md  incremental-classify.md  review-stage.md  snapshot-review.md
pullapprove-review/: .gitignore  README.md  vite.config.ts
pullapprove_review/: __init__.py  cli.py  git.py  hunks.py  skill.py  state.py
review/: CLAUDE.md  Cargo.toml
review/examples/: bench_hunk_loading.rs
review/resources/: taxonomy.json
review/resources/eval/: cases.json
review/src/: error.rs  filters.rs  lib.rs
review/src/ai/: classify.rs  mod.rs
review/src/ai/grouping/: generate.rs  mod.rs  prompt.rs
review/src/ai/summary/: diagram_prompt.rs  generate.rs  mod.rs  prompt.rs
review/src/classify/: claude.rs  mod.rs  prompt.rs  static_classify.rs  static_rules.rs
review/src/cli/: mod.rs
review/src/cli/commands/: agent.rs  approve.rs  classify.rs  compare.rs  delete.rs  diff.rs  eval.rs  files.rs  list.rs  mod.rs  notes.rs  open.rs  pr.rs  reset.rs  start.rs  status.rs  symbols.rs  taxonomy.rs  trust.rs  untrust.rs
review/src/diff/: parser.rs
review/src/grouping/: generate.rs  prompt.rs
review/src/narrative/: generate.rs  mod.rs  prompt.rs
review/src/review/: central.rs  state.rs  storage.rs
review/src/sources/: github.rs  local_git.rs  mod.rs  traits.rs
review/src/summary/: generate.rs  mod.rs  prompt.rs
review/src/symbols/: cache.rs  extractor.rs  mod.rs
review/src/trust/: matching.rs  mod.rs  patterns.rs
scripts/: bench  build  build-cli  check-unreleased  cli  dev  dev-web  fix  gh-release  icons  install  install-extension  install-local  mobile  mobile-build  mobile-check  mobile-dev  mobile-install  pre-commit  profile-battery  release  start-vite  test  test-sync  traces  version
src/: App.tsx  CLAUDE.md  index.css  main.tsx  router.tsx
src-tauri/: .taurignore  CLAUDE.md  Cargo.toml  tauri.conf.dev.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: taxonomy.json
src-tauri/src/: commands.rs  lib.rs  main.rs  watchers.rs
src-tauri/src/classify/: claude.rs  mod.rs  prompt.rs
src-tauri/src/desktop/: commands.rs  companion_server.rs  debug_server.rs  mod.rs  server.rs  tray.rs  watchers.rs
src-tauri/src/desktop/companion_server/: middleware.rs  mod.rs  router.rs  state.rs  tls.rs
src-tauri/src/desktop/companion_server/handlers/: actions.rs  comparisons.rs  git.rs  github.rs  guide.rs  mod.rs  reviews.rs  taxonomy.rs
src-tauri/src/diff/: parser.rs
src-tauri/src/review/: state.rs  storage.rs
src-tauri/src/sources/: local_git.rs  mod.rs  traits.rs
src-tauri/src/trust/: matching.rs  patterns.rs
tests/: __init__.py  test_classify.py  test_cli.py  test_cli_integration.py  test_hunks.py  test_state.py
vscode/: .gitignore  .vscodeignore  CONTRIBUTING.md  README.md  biome.json  esbuild.js  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  tsconfig.webview.json
(+689 files in other folders)
