[workspace]
resolver = "2"
members = ["core", "desktop/tauri"]

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
# Deny correctness lints — these are almost always bugs
correctness = { level = "deny", priority = -1 }

# Warn on broad lint groups
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Restriction lints (opt-in, warn)
allow_attributes_without_reason = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
str_to_string = "warn"
undocumented_unsafe_blocks = "warn"

# Pedantic overrides — these are too noisy for this codebase
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
items_after_statements = "allow"
similar_names = "allow"

# Cargo lint overrides
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
