[project]
name = "human-review"
version = "0.1.0"
description = "CLI for hunk-level code review tracking"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Dropseed", email = "python@dropseed.dev" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = ["click>=8", "pydantic>=2"]

[project.urls]
Homepage = "https://www.pullapprove.com/human-review/?ref=pypi"
Documentation = "https://5.pullapprove.com/docs/?ref=pypi"

[project.scripts]
human-review = "human_review.cli:cli"
git-review = "human_review.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.4.0", "ruff>=0.14.13", "ty>=0.0.13"]

[tool.pytest.ini_options]
addopts = "-v"
