[package]
name = "compare"
version = "0.0.1"
description = "A diff review library and CLI"
edition = "2021"

[lib]
name = "compare"
path = "src/lib.rs"

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
glob = "0.3"
urlencoding = "2"
tokio = { version = "1", features = ["time", "sync", "rt", "rt-multi-thread", "macros"] }
futures = "0.3"
base64 = "0.22"
ignore = "0.4"
regex = "1"
dirs = "5"

# CLI dependencies (feature-gated)
clap = { version = "4", features = ["derive"], optional = true }
colored = { version = "2", optional = true }

[features]
default = []
cli = ["clap", "colored"]

[[bin]]
name = "compare-cli"
path = "src/bin/compare_cli.rs"
required-features = ["cli"]

[[bin]]
name = "git-compare"
path = "src/bin/git_compare.rs"
required-features = ["cli"]

[dev-dependencies]
tempfile = "3"
