[package]
name = "compare-desktop"
version = "0.0.1"
description = "A diff review desktop app"
edition = "2021"
default-run = "compare-desktop"

[lib]
name = "compare_desktop"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core library
compare = { path = "../compare" }

# Tauri and plugins
tauri = { version = "2", features = ["devtools", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-global-shortcut = "2"

# Desktop-specific dependencies
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
urlencoding = "2"
tokio = { version = "1", features = ["time", "sync", "rt", "rt-multi-thread", "macros"] }
notify = "6.0"
notify-debouncer-mini = "0.4"
ignore = "0.4"
chrono = "0.4"
tiny_http = "0.12"

# Sync server
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
