[package]
name = "review-desktop"
version = "0.0.18"
description = "A diff review desktop app"
license = "FSL-1.1-MIT"
edition = "2021"
default-run = "review-desktop"

[lib]
name = "review_desktop"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core library
review = { path = "../review", features = ["symbols-dev"] }

# Tauri and plugins
tauri = { version = "2.10", features = ["macos-private-api", "devtools", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-liquid-glass = "0.1"

# Desktop-specific dependencies
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
urlencoding = "2"
tokio = { version = "1", features = ["time", "sync", "rt", "rt-multi-thread", "macros"] }
notify = "6.0"
notify-debouncer-mini = "0.4"
ignore = "0.4"
chrono = "0.4"
tiny_http = "0.12"
getrandom = "0.2"
sentry = "0.35"

[features]
default = []
symbols-all = ["review/symbols-all"]

[lints]
workspace = true
